--- a/projects.html
+++ b/projects.html
@@ -2,15 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>About</title>
+		<title>Projects</title>
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
 		<div class="tStyle">
-			<h2><a href="projects.html">Projects</a></h2>
-		</div>
-		<div class="pStyle">
-			<p>Hi welcome to my website!</p>
+			<h2><a href="index.html">About</a></h2>
 		</div>
 		
 	</body>
