--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,6 @@
 		<div class="tStyle">
 			<h2><a href="index.html">About</a></h2>
 		</div>
-		
+		<p><a href="SoloLearnWebsite.html">Things learned in SoloLearn</a></p>
 	</body>
 </html>
