--- a/SoloLearnWebsite.html
+++ b/SoloLearnWebsite.html
@@ -4,11 +4,27 @@
 		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 		<title>Sololearn Info I learned</title>
 		<link rel="stylesheet" href="sololearncss.css">
+		<link rel="stylesheet" href="navbar.css">
+		<script src="script.js" defer></script>
 	</head>
 	<body>
-		<div>
-			<h2><a href="projects.html">Projects</a></h2>
-		</div>
+		<!-- NAVBAR -->
+		<nav class="navbar">
+			<div class="brand-title">TheRealStrider</div>
+			<a href="#" class="toggle-button">
+				<span class="bar"></span>
+				<span class="bar"></span>
+				<span class="bar"></span>
+			</a>
+			<div class="navbar-links">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="projects.html">Projects</a></li>
+					<li><a href="about.html">About</a></li>
+				</ul>
+			</div>
+		</nav>
+		<!-- Body -->
 		<h1>Information I learned using <span class="reD">Solo</span><span class="bluE">learn</span></h1>
 		<h2>HTML5</h2>
 		<h3>Paragraphs</h3>
