--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-		<title>Projects</title>
+		<title>About</title>
 		<link rel="stylesheet" href="styles.css">
 		<link rel="stylesheet" href="navbar.css">
 		<script src="script.js" defer></script>
@@ -24,6 +24,5 @@
 				</ul>
 			</div>
 		</nav>
-		<p><a href="SoloLearnWebsite.html">Things learned in SoloLearn</a></p>
 	</body>
 </html>
