--- a/index.html
+++ b/index.html
@@ -2,13 +2,29 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-		<title>About</title>
+		<title>Home</title>
 		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="navbar.css">
+		<script src="script.js" defer></script>
 	</head>
 	<body>
-		<div class="tStyle">
-			<h2><a href="projects.html">Projects</a></h2>
-		</div>
+		<!-- NAVBAR -->
+		<nav class="navbar">
+			<div class="brand-title">TheRealStrider</div>
+			<a href="#" class="toggle-button">
+				<span class="bar"></span>
+				<span class="bar"></span>
+				<span class="bar"></span>
+			</a>
+			<div class="navbar-links">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="projects.html">Projects</a></li>
+					<li><a href="about.html">About</a></li>
+				</ul>
+			</div>
+		</nav>
+		<!-- Body -->
 		<div class="pStyle">
 			<p>Hi welcome to my website!</p>
 		</div>
