Remade Website look
I remade the website look and removed the navigation bar. Also made the website responsive for mobile devices.

--- a/index.html
+++ b/index.html
@@ -5,29 +5,36 @@
 		<title>Home</title>
 		<link rel="stylesheet" href="styles.css">
 		<link rel="stylesheet" href="navbar.css">
-		<script src="script.js" defer></script>
+		<!--Font for title of box-->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+		<!--Font for text-->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@300&family=Montserrat:wght@600&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<!-- NAVBAR -->
 		<nav class="navbar">
 			<div class="brand-title">TheRealStrider</div>
-			<a href="#" class="toggle-button">
-				<span class="bar"></span>
-				<span class="bar"></span>
-				<span class="bar"></span>
-			</a>
-			<div class="navbar-links">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="about.html">About</a></li>
-				</ul>
-			</div>
 		</nav>
 		<!-- Body -->
-		<div class="pStyle">
-			<p>Hi welcome to my website!</p>
+		<div class="para">
+			<p>Hello there traveler! Take a look around the website and see what I have in store for you. <br> This website is currently being made and is under development so anything you see is not final.</p>
 		</div>
-		
+			<!--Project Box-->
+		<div id="projectTab">
+			<div id="projectHead">
+				<h3><a href="projects.html">Projects</a></h3>
+			</div>
+			<p>Projects are things I am currently working on or have completed in the past. <br> They can be from simple webpages to programs or files for other things. <br> Click the Projects title to see them!</p>
+		</div>
+		<div class="discord">
+			<iframe src="https://discord.com/widget?id=858891552155500585&theme=dark" width="350" height="400" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+		</div>
+		<div id="discord">
+			<p><a href="https://discord.gg/N4dNKz7bDg">Discord Server</a></p>
+		</div>
 	</body>
 </html>
