--- a/projects.html
+++ b/projects.html
@@ -3,27 +3,24 @@
 	<head>
 		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 		<title>Projects</title>
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="project.css">
 		<link rel="stylesheet" href="navbar.css">
 		<script src="script.js" defer></script>
+		<!--Font for title of box-->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+		<!--Font for text-->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@300&family=Montserrat:wght@600&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<!-- NAVBAR -->
 		<nav class="navbar">
 			<div class="brand-title">TheRealStrider</div>
-			<a href="#" class="toggle-button">
-				<span class="bar"></span>
-				<span class="bar"></span>
-				<span class="bar"></span>
-			</a>
-			<div class="navbar-links">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="about.html">About</a></li>
-				</ul>
-			</div>
 		</nav>
-		<p><a href="SoloLearnWebsite.html">Things learned in SoloLearn</a></p>
+		<h1 id="titleP"><a href="index.html">Back to Main Page</a></h1>
+		<p class="para"><a href="SoloLearnWebsite.html">Things learned in SoloLearn</a></p>
 	</body>
 </html>
