--- a/SoloLearnWebsite.html
+++ b/SoloLearnWebsite.html
@@ -6,25 +6,18 @@
 		<link rel="stylesheet" href="sololearncss.css">
 		<link rel="stylesheet" href="navbar.css">
 		<script src="script.js" defer></script>
+		<!--Font for title of box-->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<!-- NAVBAR -->
 		<nav class="navbar">
 			<div class="brand-title">TheRealStrider</div>
-			<a href="#" class="toggle-button">
-				<span class="bar"></span>
-				<span class="bar"></span>
-				<span class="bar"></span>
-			</a>
-			<div class="navbar-links">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="about.html">About</a></li>
-				</ul>
-			</div>
 		</nav>
 		<!-- Body -->
+		<h1 id="projects"><a href="projects.html">Back to Projects</a></h1>
 		<h1>Information I learned using <span class="reD">Solo</span><span class="bluE">learn</span></h1>
 		<h2>HTML5</h2>
 		<h3>Paragraphs</h3>
