--- a/projects.html
+++ b/projects.html
@@ -22,5 +22,6 @@
 		</nav>
 		<h1 id="titleP"><a href="index.html">Back to Main Page</a></h1>
 		<p class="para"><a href="SoloLearnWebsite.html">Things learned in SoloLearn</a></p>
+		<p class="para"><a href="insidepc.html">Inside a Desktop PC</a></p>
 	</body>
 </html>
