Organised images and css files

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 		<title>Home</title>
-		<link rel="stylesheet" href="styles.css">
-		<link rel="stylesheet" href="navbar.css">
+		<link rel="stylesheet" href="CSS/styles.css">
+		<link rel="stylesheet" href="CSS/navbar.css">
 		<!--Font for title of box-->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
