--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 		<title>Projects</title>
-		<link rel="stylesheet" href="project.css">
-		<link rel="stylesheet" href="navbar.css">
+		<link rel="stylesheet" href="CSS/project.css">
+		<link rel="stylesheet" href="CSS/navbar.css">
 		<script src="script.js" defer></script>
 		<!--Font for title of box-->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
