--- a/insidepc.html
+++ b/insidepc.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Inside a PC</title>
-		<link rel="stylesheet" href="insidepc.css">
-		<link rel="stylesheet" href="navbar.css">
+		<link rel="stylesheet" href="CSS/insidepc.css">
+		<link rel="stylesheet" href="CSS/navbar.css">
 		<!--Fonts-->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,7 @@
 		</div>
 		<div class="top">
 			<h1>Inside of a PC (Desktop)</h1>
-			<img src="PCParts.jpg" alt="Pic of PC" usemap="#PC">
+			<img src="Images/PCParts.jpg" alt="Pic of PC" usemap="#PC">
 			<p>Click a part to know more about it!</p>
 		</div>
 		<map name="PC">
