Added translation for Spanish

--- a/es/index.html
+++ b/es/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 		<title>Home</title>
@@ -18,19 +18,22 @@
 		<!-- NAVBAR -->
 		<nav class="navbar">
 			<div class="brand-title">TheRealStrider</div>
-			<div class="flag-us"><a href=""><img src="Images/usa.png" alt="English" width="50px"></a></div>
-			<div class="flag-spain"><a href="es/index.html"><img src="Images/spain.png" alt="Español" width="50px"></a></div>
+			<div class="flag-us"><a href="../index.html"><img src="../Images/usa.png" alt="English" width="50px"></a></div>
+			<div class="flag-spain"><a href=""><img src="../Images/spain.png" alt="Español" width="50px"></a></div>
 		</nav>
 		<!-- Body -->
 		<div class="para">
-			<p>Hello there traveler! Take a look around the website and see what I have in store for you. <br> This website is currently being made and is under development so anything you see is not final.</p>
+			<p>Hola viajero! Eche un vistazo al sitio web y vea lo que tengo reservado para usted.<br>
+			Este sitio web se está haciendo actualmente y está en desarrollo, por lo que cualquier cosa que vea no es definitiva.</p>
 		</div>
 			<!--Project Box-->
 		<div id="projectTab">
 			<div id="projectHead">
-				<h3><a href="projects.html">Projects</a></h3>
+				<h3><a href="projects.html">Proyectos</a></h3>
 			</div>
-			<p>Projects are things I am currently working on or have completed in the past. <br> They can be from simple webpages to programs or files for other things. <br> Click the Projects title to see them!</p>
+			<p>Los proyectos son cosas en las que estoy trabajando actualmente o que he completado en el pasado.<br>
+			Puede ser desde páginas web simples hasta programas o archivos para otras cosas.<br>
+			Haga clic en el título proyectos para verlos!</p>
 		</div>
 		<div class="discord">
 			<iframe src="https://discord.com/widget?id=858891552155500585&theme=dark" width="350" height="400" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
