--- a/es/insidepc.html
+++ b/es/insidepc.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8">
-		<title>Inside a PC</title>
+		<title>Dentro de un PC</title>
 		<link rel="stylesheet" href="CSS/insidepc.css">
 		<link rel="stylesheet" href="CSS/navbar.css">
 		<!--Fonts-->
@@ -17,17 +17,17 @@
 		<!-- NAVBAR -->
 		<nav class="navbar">
 			<div class="brand-title">TheRealStrider</div>
-			<div class="flag-us"><a href=""><img src="Images/usa.png" alt="English" width="50px"></a></div>
-			<div class="flag-spain"><a href="es/insidepc.html"><img src="Images/spain.png" alt="Español" width="50px"></a></div>
+			<div class="flag-us"><a href="../insidepc.html"><img src="../Images/usa.png" alt="English" width="50px"></a></div>
+			<div class="flag-spain"><a href=""><img src="../Images/spain.png" alt="Español" width="50px"></a></div>
 		</nav>
 		<!--Info-->
 		<div id="project">
-			<a href="projects.html" alt="To Projects">Back to Projects</a>
+			<a href="projects.html" alt="To Projects">Volver a Proyectos</a>
 		</div>
 		<div class="top">
-			<h1>Inside of a PC (Desktop)</h1>
-			<img src="Images/PCParts.jpg" alt="Pic of PC" usemap="#PC">
-			<p>Click a part to know more about it!</p>
+			<h1>Dentro de un PC (Escritorio)</h1>
+			<img src="../Images/PCParts.jpg" alt="Pic of PC" usemap="#PC">
+			<p>¡Haga clic en una pieza para saber más al respecto!</p>
 		</div>
 		<map name="PC">
 			<area shape="poly" coords="366,20,466,27,459,149,362,144" alt="Motherboard" href="#mb">
@@ -38,13 +38,13 @@
 			<area shape="rect" coords="29,212,163,249" alt="Storage" href="#storage">
 		</map>
 		<div id="mb">
-			<h3>Motherboard</h3>
-			<p>The motherboard also known as mb for short is the main component in a PC.<br> It connects everything together allowing everything to talk to each other.<br> Not every motherboard is the same though and keep that in mind when choosing one.<br> A list of some differences between boards are as follows:</p>
+			<h3>Placa madre</h3>
+			<p>La placa base también conocida como mb es el componente principal de un PC.<br> Conecta todo lo que le permite hablar entre sí.<br> No todas las motherboards son iguales y tengan esto en cuenta al elegir una.<br> Una lista de algunas diferencias entre placas es la siguiente:</p>
 			<ul>
-				<li><strong>Features</strong>
+				<li><strong>Características</strong>
 					<ul>
 						<li>Overclocking</li>
-						<li>PCI Generation
+						<li>Generación PCI
 							<ul>
 								<li>Gen 1</li>
 								<li>Gen 2</li>
@@ -52,7 +52,7 @@
 								<li>Gen 4</li>
 							</ul>
 						</li>
-						<li>Amount of RAM able to use
+						<li>Cantidad de RAM que se puede usar
 							<ul>
 								<li>2GB</li>
 								<li>4GB</li>
@@ -65,7 +65,7 @@
 								<li>512GB</li>
 							</ul>
 						</li>
-						<li>USB Generation
+						<li>Generación USB
 							<ul>
 								<li>Gen 1</li>
 								<li>Gen 2</li>
@@ -74,14 +74,14 @@
 								<li>Gen 3.2</li>
 							</ul>
 						</li>
-						<li>Amount of SATA Ports
+						<li>Cantidad de puertos SATA
 							<ul>
 								<li>2</li>
 								<li>4</li>
 								<li>6</li>
 							</ul>
 						</li>
-						<li>PCIe Slots
+						<li>Ranuras PCIe
 							<ul>
 								<li>1</li>
 								<li>4</li>
@@ -91,23 +91,23 @@
 						</li>
 					</ul>
 				</li>
-				<li><strong>Compatibility</strong>
+				<li><strong>Compatibilidad</strong>
 					<ul>
 						<li>Chipset
 							<ul>
-								<li>Socket</li>
+								<li>Cuenca</li>
 							</ul>
 						</li>
 						<li>CPU
 							<ul>
 								<li>Intel
 									<ul>
-										<li>Generation</li>
+										<li>Generación</li>
 									</ul>
 								</li>
 								<li>AMD
 									<ul>
-										<li>Generation</li>
+										<li>Generación</li>
 									</ul>
 								</li>
 							</ul>
@@ -118,24 +118,24 @@
 								<li>DDR2</li>
 								<li>DDR3</li>
 								<li>DDR4</li>
-								<li>DDR5 (Not Released Yet)</li>
+								<li>DDR5 (Aún no se ha publicado)</li>
 							</ul>
 						</li>
 					</ul>
 				</li>
-				<li><strong>Form Factor</strong>
+				<li><strong>Factor de forma</strong>
 					<ul>
 						<li>ATX</li>
 						<li>Micro-ATX</li>
 						<li>Mini-ATX</li>
 					</ul>
 				</li>
-				<li><strong>Quality</strong>
+				<li><strong>Calidad</strong>
 					<ul>
-						<li>Materials</li>
-						<li>Strength</li>
-						<li>Heatsinks</li>
-						<li>Capacitors</li>
+						<li>Materiales</li>
+						<li>Fuerza</li>
+						<li>Disipadores</li>
+						<li>Condensadores</li>
 					</ul>
 				</li>
 			</ul>
@@ -144,12 +144,13 @@
 		<br>
 		<br>
 		<div id="ram">
-			<h3>RAM (Memory)</h3>
-			<p>Random Access Memory aka RAM is the memory of a PC.<br> It stores temporary data for the CPU to use.<br> It can be in different speeds and capacity sizes and have different heatsinks to keep it cool.<br> Differences between RAM sticks are as follows:</p>
+			<h3>RAM (Memoria)</h3>
+			<p>Memoria de acceso aleatorio La memoria RAM es la memoria de un PC.<br> Almacenes datos temporales para que la CPU los utilice.<br> Puede estar en diferentes velocidades y tamaños de capacidad y tener diferentes disipadores térmicos para mantenerlo
+			fresco.<br> Las diferencias entre las memorias RAM son las siguientes:</p>
 			<ul>
 				<li><strong>DDR</strong>
 					<ul>
-						<li>Speed
+						<li>Velocidad
 							<ul>
 								<li>200MT/s</li>
 								<li>266MT/s</li>
@@ -158,14 +159,14 @@
 								<li>400MT/s</li>
 							</ul>
 						</li>
-						<li>Capacity
+						<li>Capacidad
 							<ul>
 								<li>256MB</li>
 								<li>512MB</li>
 								<li>1GB</li>
 							</ul>
 						</li>
-						<li>Vendor
+						<li>Vendedor
 							<ul>
 								<li>Not Produced Anymore</li>
 							</ul>
@@ -174,7 +175,7 @@
 				</li>
 				<li><strong>DDR2</strong>
 					<ul>
-						<li>Speed
+						<li>Velocidad
 							<ul>
 								<li>400MT/s</li>
 								<li>533MT/s</li>
@@ -183,14 +184,14 @@
 								<li>1000MT/s</li>
 							</ul>
 						</li>
-						<li>Capacity
+						<li>Capacidad
 							<ul>
 								<li>512MB</li>
 								<li>1GB</li>
 								<li>2GB</li>
 							</ul>
 						</li>
-						<li>Vendor
+						<li>Vendedor
 							<ul>
 								<li>Not Produced Anymore</li>
 							</ul>
@@ -199,7 +200,7 @@
 				</li>
 				<li><strong>DDR3</strong>
 					<ul>
-						<li>Speed
+						<li>Velocidad
 							<ul>
 								<li>800MT/s</li>
 								<li>1066MT/s</li>
@@ -207,14 +208,14 @@
 								<li>1600MT/s</li>
 							</ul>
 						</li>
-						<li>Capacity
+						<li>Capacidad
 							<ul>
 								<li>2GB</li>
 								<li>4GB</li>
 								<li>8GB</li>
 							</ul>
 						</li>
-						<li>Vendor
+						<li>Vendedor
 							<ul>
 								<li>Corsair</li>
 								<li>Kingston</li>
@@ -227,7 +228,7 @@
 				</li>
 				<li><strong>DDR4</strong>
 					<ul>
-						<li>Speed
+						<li>Velocidad
 							<ul>
 								<li>2400MT/s</li>
 								<li>2666MT/s</li>
@@ -239,7 +240,7 @@
 								<li>4400MT/s (Requires Overclocking)</li>
 							</ul>
 						</li>
-						<li>Capacity
+						<li>Capacidad
 							<ul>
 								<li>2GB</li>
 								<li>4GB</li>
@@ -248,7 +249,7 @@
 								<li>32GB</li>
 							</ul>
 						</li>
-						<li>Vendor
+						<li>Vendedor
 							<ul>
 								<li>Corsair</li>
 								<li>Kingston</li>
@@ -262,7 +263,7 @@
 				</li>
 				<li><strong>DDR5</strong>
 					<ul>
-						<li>Not Released Yet</li>
+						<li>Aún no se ha publicado</li>
 					</ul>
 				</li>
 			</ul>
@@ -271,10 +272,11 @@
 		<br>
 		<br>
 		<div id="psu">
-			<h3>PSU (Power Supply)</h3>
-			<p>The power supply or PSU for short is what gives the PC power.<br> It converts the AC voltage from an outlet into DC voltage.<br> A PSU takes the DC voltage and splits it into +3.3V, +5V, and +12V.<br> PSUs come in many different power limits, form factors, efficiencies, and how modular they are.<br> Examples of these include:</p>
+			<h3>PSU (Fuente de alimentación)</h3>
+			<p>La fuente de alimentación o PSU es lo que da energía al PC.<br> Convierte el voltaje de AC de una toma a voltaje de DC.<br> Una fuente de alimentación toma el voltaje de DC y lo divide en +3.3V, +5V y +12V.<br> Las fuentes de alimentación se suministran en diferentes límites de potencia, factores de forma, eficiencias y su
+			capacidad de expansión.<br> Entre estos ejemplos se incluyen:</p>
 			<ul>
-				<li><strong>Power</strong>
+				<li><strong>Poder</strong>
 					<ul>
 						<li>200w</li>
 						<li>250w</li>
@@ -292,33 +294,33 @@
 						<li>850w</li>
 						<li>1000w</li>
 						<li>1200w</li>
-						<li>Many more above but not required for normal PC</li>
+						<li>Muchos más arriba pero no requeridos para PC normal</li>
 					</ul>
 				</li>
-				<li><strong>Form Factor</strong>
+				<li><strong>Factor de forma</strong>
 					<ul>
 						<li>ATX</li>
 						<li>ITX</li>
 					</ul>
 				</li>
-				<li><strong>Efficiency</strong>
+				<li><strong>Eficiencia</strong>
 					<ul>
-						<li>80 Plus</li>
-						<li>80 Plus Bronze</li>
-						<li>80 Plus Silver</li>
-						<li>80 Plus Gold</li>
-						<li>80 Plus Platinum</li>
-						<li>80 Plus Titanium</li>
+						<li>80 Más</li>
+						<li>80 Más Bronce</li>
+						<li>80 Más Plata</li>
+						<li>80 Más Oro</li>
+						<li>80 Más Platino</li>
+						<li>80 Más Titanio</li>
 					</ul>
 				</li>
-				<li><strong>Modularity</strong>
+				<li><strong>Modularidad</strong>
 					<ul>
-						<li>Non-Modular</li>
-						<li>Semi-Modular</li>
-						<li>Full-Modular</li>
+						<li>No modular</li>
+						<li>Semi modular</li>
+						<li>Totalmente modular</li>
 					</ul>
 				</li>
-				<li><strong>Vendors</strong>
+				<li><strong>Vendedor</strong>
 					<ul>
 						<li>Corsair</li>
 						<li>EVGA</li>
@@ -334,12 +336,12 @@
 		<br>
 		<br>
 		<div id="cpu">
-			<h3>CPU (Processor)</h3>
-			<p>The processor or CPU for short, is the brain of a PC.<br> It tells all the components what needs to be done and when it needs to be done.<br> There are two vendors for CPUs and they are Intel and AMD.<br> Both have different generations and sockets and must not be mixed with each other.<br> Pick what CPU you want first then choose the motherboard!<br> Examples of these CPUs are:</p>
+			<h3>CPU (Procesador)</h3>
+			<p>El procesador o CPU, en resumen, es el cerebro de un PC.<br> Indica a todos los componentes lo que se debe hacer y cuándo se debe hacer.<br> Existen dos proveedores de CPU, Intel y AMD.<br> Ambos tienen diferentes generaciones y sockets y no deben mezclarse entre sí.<br> Elija primero la CPU que desee y, a continuación, elija la placa base.<br> Ejemplos de estas CPU:</p>
 			<ul>
 				<li><strong>Intel</strong>
 					<ul>
-						<li>Generation (Only for normal PC)
+						<li>Generación (solo para PC normal)
 							<ul>
 								<li>1</li>
 								<li>2</li>
@@ -352,10 +354,10 @@
 								<li>9</li>
 								<li>10</li>
 								<li>11</li>
-								<li>12 (Not Released Yet)</li>
+								<li>12 (Aún no se ha publicado)</li>
 							</ul>
 						</li>
-						<li>Socket (Only for normal PC)
+						<li>Cuenca (solo para PC normal)
 							<ul>
 								<li>LGA-1156</li>
 								<li>LGA-1155</li>
@@ -368,7 +370,7 @@
 				</li>
 				<li><strong>AMD</strong>
 					<ul>
-						<li>Generation (Ryzen CPUs)
+						<li>Generación (Ryzen CPUs)
 							<ul>
 								<li>Zen</li>
 								<li>Zen+</li>
@@ -376,7 +378,7 @@
 								<li>Zen3</li>
 							</ul>
 						</li>
-						<li>Socket (Ryzen CPUs)
+						<li>Cuenca (Ryzen CPUs)
 							<ul>
 								<li>AM3</li>
 								<li>AM4</li>
@@ -390,29 +392,29 @@
 		<br>
 		<br>
 		<div id="gpu">
-			<h3>GPU (Graphics Card)</h3>
-			<p>The graphics card or GPU for short is what provides the display of the PC.<br> They can be integrated into CPUs but perform poorly compared to stand-alone cards.<br> There are two companies that make GPUs and several vendors that sell their variation of the card.<br> Nvidia and AMD make the GPUs and allow other vendors to give it their own look.<br> Examples are as follows:</p>
+			<h3>GPU (Tarjeta gráfica)</h3>
+			<p>La tarjeta gráfica o GPU es lo que proporciona la visualización del PC.<br> Se pueden integrar en las CPU pero tienen un rendimiento deficiente en comparación con las tarjetas independientes.<br> Hay dos empresas que hacen GPU y varios proveedores que venden su variación de la tarjeta.<br> Nvidia y AMD hacen las GPU y permiten a otros proveedores darle su propio aspecto.<br> Los ejemplos son los siguientes:</p>
 			<ul>
 				<li><strong>Nvidia</strong>
 					<ul>
 						<li>GTX
 							<ul>
-								<li>400 Series</li>
-								<li>500 Series</li>
-								<li>600 Series</li>
-								<li>700 Series</li>
-								<li>900 Series</li>
-								<li>1000 Series</li>
-								<li>1600 Series</li>
+								<li>400 Serie</li>
+								<li>500 Serie</li>
+								<li>600 Serie</li>
+								<li>700 Serie</li>
+								<li>900 Serie</li>
+								<li>1000 Serie</li>
+								<li>1600 Serie</li>
 							</ul>
 						</li>
 						<li>RTX
 							<ul>
-								<li>2000 Series</li>
-								<li>3000 Series</li>
+								<li>2000 Serie</li>
+								<li>3000 Serie</li>
 							</ul>
 						</li>
-						<li>Vendors
+						<li>Vendedor
 							<ul>
 								<li>Nvidia</li>
 								<li>MSI</li>
@@ -429,14 +431,14 @@
 					<ul>
 						<li>Radeon RX
 							<ul>
-								<li>400 Series</li>
-								<li>500 Series</li>
-								<li>5000 Series</li>
-								<li>6000 Series</li>
+								<li>400 Serie</li>
+								<li>500 Serie</li>
+								<li>5000 Serie</li>
+								<li>6000 Serie</li>
 							</ul>
 						</li>
 						<li>Radeon Vega</li>
-						<li>Vendors
+						<li>Vendedor
 							<ul>
 								<li>AMD</li>
 								<li>MSI</li>
@@ -455,12 +457,13 @@
 		<br>
 		<br>
 		<div id="storage">
-			<h3>Storage</h3>
-			<p>In order to boot up into an OS, your PC needs a storage device.<br> There are two types of storage devices that are put into the PC and not outside like a usb or external drive.<br> They are an SSD and HDD.<br> Differences for each type are as follows:</p>
+			<h3>Almacenamiento</h3>
+			<p>Para arrancar en un sistema operativo, su PC necesita un dispositivo de almacenamiento.<br> Hay dos tipos de dispositivos de almacenamiento que se colocan en el PC y no en el exterior, como una unidad usb o
+			externa.<br> Son una SSD y una unidad de disco duro.<br> Las diferencias para cada tipo son las siguientes:</p>
 			<ul>
 				<li><strong>SSD</strong>
 					<ul>
-						<li>Connection
+						<li>Conexion
 							<ul>
 								<li>SATA</li>
 								<li>PCIe</li>
@@ -470,12 +473,12 @@
 								<li>SATA Express</li>
 							</ul>
 						</li>
-						<li>Speed (With DRAM chip)
+						<li>Velocidad (con chip DRAM)
 							<ul>
 								<li>500MB/s - 3,940MB/s</li>
 							</ul>
 						</li>
-						<li>Capacity
+						<li>Capacidad
 							<ul>
 								<li>120GB - 8TB</li>
 							</ul>
@@ -484,19 +487,19 @@
 				</li>
 				<li><strong>HDD</strong>
 					<ul>
-						<li>Connection
+						<li>conexion
 							<ul>
 								<li>SATA</li>
 							</ul>
 						</li>
-						<li>Speed
+						<li>Velocidad
 							<ul>
 								<li>5,400RPM</li>
-								<li>7,200RPM (Common)</li>
+								<li>7,200RPM (Común)</li>
 								<li>10,000RPM</li>
 							</ul>
 						</li>
-						<li>Capacity
+						<li>Capacidad
 							<ul>
 								<li>20GB - 20TB</li>
 							</ul>
@@ -506,7 +509,7 @@
 			</ul>
 		</div>
 		<div id="Dbottom">
-			<a href="#top" id="bottom">Back to Top</a>
+			<a href="#top" id="bottom">Volver al principio</a>
 		</div>
 	</body>
 </html>
