--- a/es/projects.html
+++ b/es/projects.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-		<title>Projects</title>
+		<title>Proyectos</title>
 		<link rel="stylesheet" href="CSS/project.css">
 		<link rel="stylesheet" href="CSS/navbar.css">
 		<script src="script.js" defer></script>
@@ -19,11 +19,11 @@
 		<!-- NAVBAR -->
 		<nav class="navbar">
 			<div class="brand-title">TheRealStrider</div>
-			<div class="flag-us"><a href=""><img src="Images/usa.png" alt="English" width="50px"></a></div>
-			<div class="flag-spain"><a href="es/projects.html"><img src="Images/spain.png" alt="Español" width="50px"></a></div>
+			<div class="flag-us"><a href="../projects.html"><img src="../Images/usa.png" alt="English" width="50px"></a></div>
+			<div class="flag-spain"><a href=""><img src="../Images/spain.png" alt="Español" width="50px"></a></div>
 		</nav>
-		<h1 id="titleP"><a href="index.html">Back to Main Page</a></h1>
-		<p class="para"><a href="SoloLearnWebsite.html">Things learned in SoloLearn</a></p>
-		<p class="para"><a href="insidepc.html">Inside a Desktop PC</a></p>
+		<h1 id="titleP"><a href="index.html">Volver a la página principal</a></h1>
+		<p class="para"><a href="SoloLearnWebsite.html">Cosas aprendidas en SoloLearn</a></p>
+		<p class="para"><a href="insidepc.html">Dentro de un PC de Escritorio</a></p>
 	</body>
 </html>
