--- a/SoloLearnWebsite.html
+++ b/SoloLearnWebsite.html
@@ -15,6 +15,8 @@
 		<!-- NAVBAR -->
 		<nav class="navbar">
 			<div class="brand-title">TheRealStrider</div>
+			<div class="flag-us"><a href=""><img src="Images/usa.png" alt="English" width="50px"></a></div>
+			<div class="flag-spain"><a href="es/SoloLearnWebsite.html"><img src="Images/spain.png" alt="Español" width="50px"></a></div>
 		</nav>
 		<!-- Body -->
 		<h1 id="projects"><a href="projects.html">Back to Projects</a></h1>
