--- a/SoloLearnWebsite.html
+++ b/SoloLearnWebsite.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Sololearn Info I learned</title>
 		<link rel="stylesheet" href="CSS/sololearncss.css">
 		<link rel="stylesheet" href="CSS/navbar.css">
@@ -15,8 +16,8 @@
 		<!-- NAVBAR -->
 		<nav class="navbar">
 			<div class="brand-title">TheRealStrider</div>
-			<div class="flag-us"><a href=""><img src="Images/usa.png" alt="English" width="50px"></a></div>
-			<div class="flag-spain"><a href="es/SoloLearnWebsite.html"><img src="Images/spain.png" alt="Español" width="50px"></a></div>
+			<div class="flag-us"><a href=""><img src="Images/usa.png" alt="English" width="50"></a></div>
+			<div class="flag-spain"><a href="es/SoloLearnWebsite.html"><img src="Images/spain.png" alt="Español" width="50"></a></div>
 		</nav>
 		<!-- Body -->
 		<h1 id="projects"><a href="projects.html">Back to Projects</a></h1>
