--- a/es/insidepc.html
+++ b/es/insidepc.html
@@ -17,12 +17,12 @@
 		<!-- NAVBAR -->
 		<nav class="navbar">
 			<div class="brand-title">TheRealStrider</div>
-			<div class="flag-us"><a href="../insidepc.html"><img src="../Images/usa.png" alt="English" width="50px"></a></div>
-			<div class="flag-spain"><a href=""><img src="../Images/spain.png" alt="Español" width="50px"></a></div>
+			<div class="flag-us"><a href="../insidepc.html"><img src="../Images/usa.png" alt="English" width="50"></a></div>
+			<div class="flag-spain"><a href=""><img src="../Images/spain.png" alt="Español" width="50"></a></div>
 		</nav>
 		<!--Info-->
 		<div id="project">
-			<a href="projects.html" alt="To Projects">Volver a Proyectos</a>
+			<a href="projects.html">Volver a Proyectos</a>
 		</div>
 		<div class="top">
 			<h1>Dentro de un PC (Escritorio)</h1>
