--- a/es/projects.html
+++ b/es/projects.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 	<head>
-		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Proyectos</title>
 		<link rel="stylesheet" href="CSS/project.css">
 		<link rel="stylesheet" href="CSS/navbar.css">
@@ -19,8 +20,8 @@
 		<!-- NAVBAR -->
 		<nav class="navbar">
 			<div class="brand-title">TheRealStrider</div>
-			<div class="flag-us"><a href="../projects.html"><img src="../Images/usa.png" alt="English" width="50px"></a></div>
-			<div class="flag-spain"><a href=""><img src="../Images/spain.png" alt="Español" width="50px"></a></div>
+			<div class="flag-us"><a href="../projects.html"><img src="../Images/usa.png" alt="English" width="50"></a></div>
+			<div class="flag-spain"><a href=""><img src="../Images/spain.png" alt="Español" width="50"></a></div>
 		</nav>
 		<h1 id="titleP"><a href="index.html">Volver a la página principal</a></h1>
 		<p class="para"><a href="SoloLearnWebsite.html">Cosas aprendidas en SoloLearn</a></p>
