--- a/insidepc.html
+++ b/insidepc.html
@@ -17,12 +17,12 @@
 		<!-- NAVBAR -->
 		<nav class="navbar">
 			<div class="brand-title">TheRealStrider</div>
-			<div class="flag-us"><a href=""><img src="Images/usa.png" alt="English" width="50px"></a></div>
-			<div class="flag-spain"><a href="es/insidepc.html"><img src="Images/spain.png" alt="Español" width="50px"></a></div>
+			<div class="flag-us"><a href=""><img src="Images/usa.png" alt="English" width="50"></a></div>
+			<div class="flag-spain"><a href="es/insidepc.html"><img src="Images/spain.png" alt="Español" width="50"></a></div>
 		</nav>
 		<!--Info-->
 		<div id="project">
-			<a href="projects.html" alt="To Projects">Back to Projects</a>
+			<a href="projects.html">Back to Projects</a>
 		</div>
 		<div class="top">
 			<h1>Inside of a PC (Desktop)</h1>
