--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<!--Project Box-->
 		<div id="projectTab">
 			<div id="projectHead">
-				<h3><a href="projects.html">Projects</a></h3>
+				<h3><a href="projects">Projects</a></h3>
 			</div>
 			<p>Projects are things I am currently working on or have completed in the past. <br> They can be from simple webpages to programs or files for other things. <br> Click the Projects title to see them!</p>
 		</div>
